force-app/main/default/objects/OpportunitySplit/fields/Overlay_Type__c.field-meta.xml
<CustomField>
    <fullName>Overlay_Type__c</fullName>
    <description>Roles for Opportunity Team Member .</description>
    <label>Overlay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Contribution</fullName>
            </value>
            <value>
                <fullName>Solution Consultant</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Product Specialist</fullName>
            </value>
            <value>
                <fullName>Sales Specialist</fullName>
            </value>
            <value>
                <fullName>International Specialist</fullName>
            </value>
            <value>
                <fullName>Solution Specialist</fullName>
                <isActive>false</isActive>
                <label>Solution Specialist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>