force-app/main/default/objects/OpportunitySplit/fields/Role_Name_at_Opportunity_Closure__c.field-meta.xml
<CustomField>
    <fullName>Role_Name_at_Opportunity_Closure__c</fullName>
    <label>Role Name at Opportunity Closure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>