force-app/main/default/objects/OpportunitySplit/fields/Split_Member_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Split_Member_Current_Role__c</fullName>
    <formula>SplitOwner.Current_Owner_Role__c</formula>
    <label>Split Member Current Role</label>
    <type>Text</type>
</CustomField>