force-app/main/default/objects/OpportunitySplit/fields/Split_Member_Role_At_Opportunity_Closure__c.field-meta.xml
<CustomField>
    <fullName>Split_Member_Role_At_Opportunity_Closure__c</fullName>
    <description>Opportunity Split Team Member role at opportunity closure</description>
    <label>Split Member Role At Opportunity Closure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>